tests/fixtures/invalid/pow_none_list_dict.py
# Cannot call pow() with None, List[int], Dict[str, int]
x = pow(None, [1, 2, 3], {"a": 1})
